bug fiz z-index

--- a/src/components/common/head/head.css
+++ b/src/components/common/head/head.css
@@ -25,7 +25,7 @@
   width: 100%;
   top: 0;
   border-bottom: solid;
-  z-index: 9;
+  z-index: 8;
 }
 
 .center-icon{  padding: 2px 2px;  }
@@ -75,7 +75,7 @@
   min-width: 200px;
   height: 100%; /* 100% Full-height */
   width: 40%; /* 0 width - change this with JavaScript */
-  z-index: 1;
+  z-index: 9;
   top: 0;
 
   padding: 10px;
